--- a/package.json
+++ b/package.json
@@ -1,46 +1,59 @@
 {
-    "name": "sh-input-select",
-    "version": "0.1.5",
-    "description": "Select input box superhero theme",
-    "main": "bin/sh-input-select.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "./node_modules/.bin/webpack -d --watch --config webpack.config.js",
-        "example": "./node_modules/.bin/webpack -d --watch --config webpack.example.config.js"
-    },
-    "homepage": "https://superheroui.github.io/",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/SuperheroUI/shSelectText"
-    },
-    "keywords": [
-        "select",
-        "input",
-        "field",
-        "superheroui",
-        "react",
-        "component"
-    ],
-    "author": "Kevin <kevinbatchelor@gmail.com>",
-    "license": "MIT",
-    "devDependencies": {
-        "babel-core": "^6.11.4",
-        "babel-loader": "^6.2.4",
-        "babel-plugin-transform-object-rest-spread": "^6.8.0",
-        "babel-preset-es2015": "^6.9.0",
-        "babel-preset-react": "^6.11.1",
-        "css-loader": "^0.23.1",
-        "node-sass": "^3.8.0",
-        "react-hot-loader": "^1.3.0",
-        "sass-loader": "^4.0.0",
-        "style-loader": "^0.13.1",
-        "webpack": "^1.13.1",
-        "webpack-dev-server": "^1.14.1"
-    },
-    "dependencies": {
-        "lodash": "^4.14.1",
-        "react": "^15.3.0",
-        "react-dom": "^15.3.0",
-        "sh-core": "^0.1.2"
-    }
+  "name": "sh-input-select",
+  "version": "0.1.5",
+  "description": "Select input box superhero theme",
+  "main": "bin/sh-input-select.js",
+  "scripts": {
+    "clean": "rm -r ./bin",
+    "test": "./node_modules/.bin/karma start",
+    "dev": "./node_modules/.bin/webpack -d --watch --config webpack.config.js",
+    "example": "./node_modules/.bin/webpack -d --watch --config webpack.example.config.js"
+  },
+  "homepage": "https://superheroui.github.io/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SuperheroUI/shSelectText"
+  },
+  "keywords": [
+    "select",
+    "input",
+    "field",
+    "superheroui",
+    "react",
+    "component"
+  ],
+  "author": "Kevin <kevinbatchelor@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "chai": "^3.5.0",
+    "css-loader": "^0.23.1",
+    "expect": "^1.20.2",
+    "istanbul-instrumenter-loader": "^0.2.0",
+    "karma": "^1.2.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-cli": "^1.0.1",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.1.1",
+    "karma-mocha-reporter": "^2.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
+    "mocha": "^3.0.2",
+    "node-sass": "^3.8.0",
+    "react-hot-loader": "^1.3.0",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1"
+  },
+  "dependencies": {
+    "lodash": "^4.14.1",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "sh-core": "^0.1.2"
+  }
 }
