--- a/package.json
+++ b/package.json
@@ -30,22 +30,17 @@
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "chai": "^3.5.0",
     "css-loader": "^0.23.1",
-    "expect": "^1.20.2",
-    "istanbul-instrumenter-loader": "^0.2.0",
+    "isparta-loader": "^2.0.0",
+    "jasmine-core": "^2.4.1",
     "karma": "^1.2.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^1.0.1",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.1.1",
-    "karma-mocha-reporter": "^2.1.0",
-    "karma-sourcemap-loader": "^0.3.7",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.1",
     "karma-webpack": "^1.8.0",
-    "mocha": "^3.0.2",
     "node-sass": "^3.8.0",
-    "react-hot-loader": "^1.3.0",
+    "phantomjs": "^2.1.7",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
