adding build tool config file.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "clean": "rm -r ./bin",
     "test": "./node_modules/.bin/karma start",
+    "build": "./node_modules/.bin/webpack -d --config webpack.config.js",
     "dev": "./node_modules/.bin/webpack -d --watch --config webpack.config.js",
     "example": "./node_modules/.bin/webpack -d --watch --config webpack.example.config.js"
   },
