--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,10 @@ node_js:
  - 4
 before_script:
  - npm run build
+notifications:
+  email:
+    recipients:
+      - hbillings@insidesales.com
+      - kbatchelor@insidesales.com
+    on_success: never
+    on_failure: change
