--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "clean": "rm -r ./bin",
     "test": "./node_modules/.bin/karma start",
+    "test-watch": "./node_modules/.bin/karma start --no-single-run",
+    "coveralls": "./node_modules/.bin/coveralls < ./bin/coverage/lcov/lcov.info",
     "build": "./node_modules/.bin/webpack -d --config webpack.config.js",
     "dev": "./node_modules/.bin/webpack -d --watch --config webpack.config.js",
     "example": "./node_modules/.bin/webpack -d --watch --config webpack.example.config.js"
@@ -31,6 +33,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "coveralls": "^2.11.12",
     "css-loader": "^0.23.1",
     "isparta-loader": "^2.0.0",
     "jasmine-core": "^2.4.1",
@@ -50,6 +53,6 @@
     "lodash": "^4.14.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "sh-core": "^0.1.2"
+    "sh-core": "^0.1.13"
   }
 }
